--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="sidebars">
                     <div class="col-xl-2 col-lg-3 col-md-4 fixed-top sidebar smalls">
                         <div class="navbar-brand text-center d-block mx-auto mt-2">
-                            <img src="/img/IMG_20200731_162542.png"  style="width: 150px;">
+                            <img src="img/IMG_20200731_162542.png"  style="width: 150px;">
                         </div>
                         <hr class="bod">
                         <div class="text-center">
@@ -490,7 +490,7 @@
                                     <div class="card-deck d-flex flex-column">
                                         <div class="card" data-toggle="collapse" data-target="#John" >
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;">
-                                                <img class="rounded" style="width:50px;" src="/img/cust1.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust1.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">John posted a comment</h5>
                                             </div>
                                         </div>
@@ -503,7 +503,7 @@
                                         </div>
                                         <div class="card" data-toggle="collapse" data-target="#Mark">
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;">
-                                                <img class="rounded" style="width:50px;" src="/img/cust2.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust2.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">Mark posted a comment</h5>
                                             </div>
                                         </div>
@@ -516,7 +516,7 @@
                                         </div>
                                         <div class="card" data-toggle="collapse" data-target="#Monica">
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;" >
-                                                <img class="rounded" style="width:50px;" src="/img/cust3.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust3.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">Monica posted a comment</h5>
                                             </div>
                                         </div>
@@ -529,7 +529,7 @@
                                         </div>
                                         <div class="card" data-toggle="collapse" data-target="#Vivien">
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;">
-                                                <img class="rounded" style="width:50px;" src="/img/cust4.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust4.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">Vivien posted a comment</h5>
                                             </div>
                                         </div>
@@ -542,7 +542,7 @@
                                         </div>
                                         <div class="card" data-toggle="collapse" data-target="#Nick">
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;">
-                                                <img class="rounded" style="width:50px;" src="/img/cust5.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust5.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">Nick posted a comment</h5>
                                             </div>
                                         </div>
@@ -555,7 +555,7 @@
                                         </div>
                                         <div class="card" data-toggle="collapse" data-target="#Ann">
                                             <div class="card-body d-flex flex-row bg-secondary p-3 m-1" style="border-radius: 5px;">
-                                                <img class="rounded" style="width:50px;" src="/img/cust6.jpeg" alt="">
+                                                <img class="rounded" style="width:50px;" src="img/cust6.jpeg" alt="">
                                                 <h5 class="ml-4 text-white">Ann posted a comment</h5>
                                             </div>
                                         </div>
